# hashmatrix-privacy

./: .gitignore  CLAUDE.md  README.md  docker-compose.local.yml
.github/workflows/: ci.yml
contracts/: README.md
contracts/proto/privacy/v1/: psi.proto
engine-py/: .dockerignore  Dockerfile  README.md  pyproject.toml
engine-py/src/privacy_engine/: __init__.py  __main__.py  app.py  models.py  psi.py  tenant.py
engine-py/tests/: test_app.py  test_psi.py
node-mock/: Dockerfile  server.py
orchestrator-java/: Dockerfile  README.md  ci-settings.xml  pom.xml
orchestrator-java/src/main/java/com/hashmatrix/privacy/: PrivacyOrchestratorApplication.java
orchestrator-java/src/main/java/com/hashmatrix/privacy/config/: EngineClientConfig.java
orchestrator-java/src/main/java/com/hashmatrix/privacy/psi/: CrossTenantNotAuthorizedException.java  EngineClient.java  PsiController.java  PsiOrchestrationService.java
orchestrator-java/src/main/java/com/hashmatrix/privacy/psi/dto/: EngineRunRequest.java  PartyDto.java  PsiIntersectRequest.java  PsiResult.java
orchestrator-java/src/main/java/com/hashmatrix/privacy/web/: ApiError.java  GlobalExceptionHandler.java
orchestrator-java/src/main/resources/: application.yml
orchestrator-java/src/test/java/com/hashmatrix/privacy/psi/: PsiControllerWebTest.java  PsiOrchestrationServiceTest.java
samples/: psi_smoke.py
